started chapter 6 and also updated readme with intellij/openjfx config info